# indian-palmistry-ai

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  AUTH_DEBUGGING_CONTEXT.md  CACHE_FIX_DOCUMENTATION.md  DISCLAIMER.md  Dockerfile  IMPLEMENTATION_STATUS.md  Makefile  PHASE_1_IMPLEMENTATION_SUMMARY.md  PRIVACY_POLICY.md  PROJECT_CONTEXT.md  QUICK_START.md  README.md  SINGLE_READING_REFACTOR_PLAN.md  Setup-Instructions.md  TERMS_AND_CONDITIONS.md  alembic.ini  cookies.txt  deploy.sh  docker-compose.prebuilt.yml  docker-compose.prod.yml  docker-compose.yml  errors.txt  health.sh  logs.sh  models_notes.md  pyproject.toml  restart.sh  run_session_tests.py  run_tests.py  setup.sh  staged.txt  start.sh  stop.sh  test_cache_fix.py
.github/workflows/: frontend-deploy.yml
alembic/: env.py
alembic/versions/: 4421d6bfe6b9_add_age_and_gender_fields_to_user_model.py  4b7da55652ea_rename_readings_table_to_analyses.py  510a5ec8160b_add_conversation_enhancements.py  5e48529687fb_add_key_features_strengths_guidance_to_.py  6c0fcf67d508_change_analysis_conversation_to_one_to_.py  75749e4e479b_single_reading_refactor_add_is_current_.py  7ad583db3e3f_migrate_to_responses_api_add_file_ids_.py  819e95294bd3_add_phase_2_models_user_analysis_.py  (+6 more)
app/: __init__.py  main.py
conversations-product/: BACKEND_TECHNICAL_SPEC.md  DEVELOPMENT_PHASES.md  FRONTEND_TECHNICAL_SPEC.md  PRODUCT_SPECIFICATION.md  README.md  RISK_ASSESSMENT.md  SUCCESS_METRICS.md
docs/: ANALYSIS_PAGE_IMPROVEMENTS.md  AUTHENTICATION_IMPROVEMENTS.md  CACHE_DEBUG_SYSTEM.md  CONVERSATIONS_PAGE_FIX.md  DASHBOARD_LIVE_DATA_INTEGRATION.md  ENHANCED_LOGIN_UX.md  LOGIN_ERROR_HANDLING_FIX.md  LOGOUT_NETWORK_ERROR_FIX.md  SECURITY_README.md  SESSION_FIXES.md  phase-3-code-documentation.md  project-overview.md  project-rules.md  tech-stack.md  theme-rules.md  ui-rules.md  user-flow.md
frontend/: .gitkeep  Dockerfile  Dockerfile.backup  Dockerfile.prebuilt  README.md  eslint.config.mjs  lighthouserc.js  next.config.ts  next.config.ts.backup  package-lock.json  package.json  playwright.config.ts  tsconfig.json
scripts/: setup_cleanup_cron.sh
tests/: README.md  __init__.py  conftest.py  conftest_followup.py  test_analysis_page_improvements.py  test_authentication_improvements.py  test_cache_debug_system.py  test_conversations_page.py  test_dashboard_live_integration.py  test_migration_followup_fields.py  test_structure_validation.py
(+236 files in other folders)
